removed scrollbar and fixed home button bug

--- a/portfolio/src/css/page3.css
+++ b/portfolio/src/css/page3.css
@@ -9,7 +9,7 @@
   border-radius: 15px;
 }
 .contactForm {
-  margin: 10px auto 0;
+  margin: 5% auto 0;
   border-radius: 50%;
   width: 700px;
   height: 700px;
