--- a/portfolio/src/less/home.less
+++ b/portfolio/src/less/home.less
@@ -1,3 +1,13 @@
+body {
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
+  }
+  
+  body::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+  }
+
 .home-container {
     margin-top: 80px;
     background: rgba(51, 51, 51, 1);
@@ -24,6 +34,17 @@
                 font-size: 3em;
                 flex-wrap: wrap;
             }
+
+            @media screen and (max-width: 1492px) {
+                .bottom-half {
+                    margin-top: -100px;
+                }
+            }
+            @media screen and (max-width: 919px) {
+                .mid-half {
+                    margin-top: -100px;
+                }
+            }
         }
     
 
@@ -33,11 +54,18 @@
             flex-direction: row;
             margin: 0 auto;
             justify-content: space-around;
+            height: 600px;
             
             .nico-picture {
                 border-radius: 25%;
                 // max-width: 200px;
                 // max-height: 200px;
+            }
+            @media screen and (max-width: 1100px) {
+                .nico-picture {
+                    max-height: 350px;
+                    max-width: 350px;
+                }
             }
             
             .content {
@@ -45,13 +73,39 @@
                     color: whitesmoke;
                     align-self: center;
                     width: 60%;
+                    margin-top: -50px;
+                }
+
+                .arrow-info {
+                    margin-top: 25px;
+                }
+
+                .svg-container {
+                    margin: -80px 0 0 -60px;
+                }
+
+                @media screen and (max-width: 1120px) {
+                    .svg-container {
+                        margin-top: -350px;
+                    }
+                }
+                @media screen and (max-width: 919px) {
+                    .svg-container {
+                        margin-left: -100px;
+                    }
                 }
 
                 #arrow-icon-svg:hover {
                     cursor: pointer;
                     filter: invert(50%) sepia(86%) saturate(1871%) hue-rotate(158deg) brightness(90%) contrast(101%);
                 }
-            }        
+            }
+            
+            @media screen and (max-width: 1200px) {
+                .content {
+                    margin-top: -50px;
+                }
+            }
         }
     }
 
